syntax="proto3";
package grpc_todo_app;

service TodoApp{
    rpc getTodo (Id) returns (Todo) {}
    rpc getAll (TodoEmpty) returns (Todos) {}
}
message Todos{
    repeated Todo todos=1;
}
message Todo{
    int32 id=1;
    String name=2;
    bool isCompleted=3

}

message Id{
int32 id=1;
}

message TodoEmpty{

}